<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/itesogram"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/login_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_correo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/login_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_user" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/olvidaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidaste_tus_datos_de_inicio_de_sesi_n"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/obten_ayuda"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/olvidaste"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_tienes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/no_tienes_cuenta"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olvidaste" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/reg_strate"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/no_tienes"
        app:layout_constraintTop_toBottomOf="@+id/ayuda" />



</androidx.constraintlayout.widget.ConstraintLayout>

<!--
<com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_main_tv_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_btn_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="Hola mundo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_main_btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_tv_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Click Aqui!" />
-->